--- a/05-17.November/content/durchfuehrung.tex
+++ b/05-17.November/content/durchfuehrung.tex
@@ -5,5 +5,5 @@ Die in diesem Versuch verwendete Wärmepumpe hat die folgende schematische Darst
 
 %Bild einfügen
 
-Zu Beginn werden die Ruhedrücke und Temperaturen, sowie die spezifische Wärmekapazität des Kupfers aufgenommen. Nachdem die beiden Wasserreservoire befüllt wurden, werden die Rührmotoren angeschaltet, um die Wassertemperatur in den Reservoiren konstant zu halten. Sodann wird der Kompressor eingeschaltet und man startet die Messreihe. Dazu werden die Messdaten der Mano- und Thermometer, sowie die Leistungsaufnahme des Kompressors im Minutentakt notiert. Die Messreihe wird beendet wenn die Temperatur $T_\text{1}$ $50^\circ \text{C}$ erreicht hat. \\
+Zu Beginn werden die Ruhedrücke und Temperaturen, sowie die spezifische Wärmekapazität des Kupfers aufgenommen. Nachdem die beiden Wasserreservoire befüllt wurden, werden die Rührmotoren angeschaltet, um die Wassertemperatur in den Reservoiren konstant zu halten. Sodann wird der Kompressor eingeschaltet und es wird  die Messreihe gestartet. Dazu werden die Messdaten der Mano- und Thermometer, sowie die Leistungsaufnahme des Kompressors im Minutentakt notiert. Die Messreihe wird beendet, wenn die Temperatur $T_\text{1}$ $50^\circ \text{C}$ erreicht hat. \\
 Wichtig ist, dass sämtliche Leitungen und die beiden Reservoire wärmeisoliert sind, um die Wärmeverluste zu minimieren.
