--- a/03-3.November/content/auswertung.tex
+++ b/03-3.November/content/auswertung.tex
@@ -52,13 +52,13 @@ und einer Länge von
 \begin{equation}
 	I_\text{S} = \frac{ml^2}{12}= 2.85 \cdot 10^{-3} \, \text{kg m} \ .
 \end{equation}
-Für die vom Schwerpunkt um die Strecke $a$ verschobene Zylinder ergibt sich nach Formel \ref{eqn:Steiner} ein Trägheitsmoment $I_\text{G}$ von (siehe Tabelle \ref{tab:I_D})
+Für die vom Schwerpunkt um die Strecke $a$ verschobenen Zylinder ergibt sich nach Formel \ref{eqn:Steiner} ein Trägheitsmoment $I_\text{G}$ von (siehe Tabelle \ref{tab:I_D})
 \begin{equation}
 	I_\text{G}= I_\text{Schwerpunkt}+ I_\text{Steiner} = m (\frac{R^2}{4} + \frac{h^2}{12}) + m \cdot a^{2}
 \end{equation}
-Mit Hilfe linearer Regression soll das Trägheitsmoment der Drillachse bestimmt werden. Dafür wird Formel \ref{eqn:Schwingungsdauer} quadriert und das Trägheitsmoment
+Mit Hilfe einer linearen Regression soll das Trägheitsmoment der Drillachse bestimmt werden. Dafür wird Formel \ref{eqn:Schwingungsdauer} quadriert und das Trägheitsmoment
 \begin{align*}
-	I_\text{ges} = I_\text{D} + I_\text{S} + 2 \cdot I_\text{G}
+	I_\text{ges} = I_\text{D} + 2 \cdot I_\text{G}
 \end{align*}
 in die Formel eingesetzt.
 \begin{table}[ht]
@@ -85,23 +85,23 @@ in die Formel eingesetzt.
 \end{table}
 Um einen Koeffizientenvergleich zwischen der Regression und der quadratischen Schwingungsdauer zu machen, werden die Therme wie folgt sortiert.
 \begin{equation}
-	\underbrace{T^2}_y = \underbrace{\frac{8 \pi^2 m_\text{G}}{D}}_m \underbrace{a^2}_x + \underbrace{\frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right) + \frac{m_\text{S} l^2}{12}}_b
+	\underbrace{T^2}_y = \underbrace{\frac{8 \pi^2 m_\text{G}}{D}}_m \underbrace{a^2}_x + \underbrace{\frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right)}_b
 \end{equation}
 Die Steigung $m$ berechnet sich nach Formel \ref{eqn:m} und der Koeffizeientvergleich ergibt
 \begin{align}
-	m = \num{798+- 6} = \frac{8 \pi^2 m_\text{G}}{D}
+	m = \num{798 +- 6} = \frac{8 \pi^2 m_\text{G}}{D}
 \end{align}
 Daraus ergibt sich eine Winkelrichtgröße von
 \begin{align}
-	D = (\num{2.19 +- 0.02}) \cdot 10^{-2} \, \text{Nm} \ .
+	D = (\num{2.16 +- 0.02}) \cdot 10^{-2} \, \text{Nm} \ .
 \end{align}
-Das Trägheitsmoment der Drillachse errechnet sich aus dem vergleich zwischen dem errechnetem Wert der Regression und der gemmesenen Werte.
+Das Trägheitsmoment der Drillachse errechnet sich aus dem vergleich zwischen dem errechnetem Wert der Regression und der gemessenen Werte.
 \begin{align}
-	b = \frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right) + \frac{m_\text{S} l^2}{12} = 5.48
+	b = \frac{4 \pi^2 I_\text{D}}{D} + \frac{8\pi^2 m_\text{G}}{D} \left( \frac{R^2}{4} + \frac{h^2}{12} \right) = 5.48
 \end{align}
 Nach Umstellen der Formel nach $I_\text{D}$, beträgt das Trägheitsmoment der Drillachse
 \begin{align*}
-	I_\text{D} = -4.22 \cdot 10^{-4} \text{kg m}^2 \ .
+	I_\text{D} = (\num{2.8 +- 1.9}) \cdot 10^{-3} \, \text{kg m}^2 \ .
 \end{align*}
 
 
