--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -199,4 +199,22 @@ ist und das die Dichte homogen verteilt ist. Daraus lässt sich die ideale Gasgl
   \frac{p_0}{\rho_0 T_0} = \frac{p_2}{T_\text{2} \rho} \Leftrightarrow& \rho = \frac{\rho_o T_o P_2}{T_\text{2} P_0}
   \label{eqn:rho}
 \end{eqnarray*}
-einen Ausdruck für die Dichte in Abhängigkeit der Temperaturen und Drücke.
+einen Ausdruck für die Dichte in Abhängigkeit der Temperaturen und Drücke. Dies wird in Formel \ref{eqn:nmech} eingesetzt und die Ergebnisse für die verschiedenen Zeitpunkte in Tabelle \ref{tab:LdK} eingetragen. Für das verwendete Gas beträgt die Wärmeleitfähikeit 
+\begin{align*}
+  \kappa = 0.0808 \frac{mW}{cm K}
+\end{align*}
+\begin{table}
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+    $t$ \ s & \rho $\frac{g}{m^3}$ & Leistung N/W \\
+    \midrule
+    60   & 16.37 &  	\\
+    400  & 18.27 &	\\
+    1000 & 14.98 &	\\
+    1500 & 13.55 &	\\
+    \bottomrule
+  \end{tabular}
+  \caption{Leistung des Kompressors}
+  \label{tab:LdK}
+\end{table}
