--- a/05-17.November/content/theorie.tex
+++ b/05-17.November/content/theorie.tex
@@ -78,6 +78,7 @@ Mit der Poissonschen Gleichung und
 folgt $N_\text{mech}$ zu:
 \begin{equation}
 	N_\text{mech} = \frac{1}{\kappa - 1} \left(p_\text{b} \sqrt[\kappa]{\frac{p_\text{a}}{p_\text{b}}} - p_\text{a} \right) \frac{1}{\rho} \frac{dm}{dt} \ ,
+	\label{eqn:nmech}
 \end{equation}
 mit der Dichte $\rho$ und dem Druck $p_\text{a}$.
 
