--- a/05-17.November/content/auswertung.tex
+++ b/05-17.November/content/auswertung.tex
@@ -118,7 +118,7 @@ Aus der Funktion wird der Differentialquotient für $T_\text{1}$ und $T_\text{2}
 \subsection{Güteziffer}
 Mit Hilfe des Differentialquotienten und der Wärmekapazität der mit Wasser befüllten Reservoire
 \begin{equation}
-  c_\text{w} m_\text{w} = 6230.64 \cdot (\num{4000 +- 1.6}) \, \frac{\text{J}}{\text{K}} = (\num{24.9 +- 0.0}) \cdot 10^6 \, \frac{\text{J}}{\text{K}}
+  c_\text{w} m_\text{w} = 6230.64 \cdot (\num{4 +- 0.0016}) \, \frac{\text{J}}{\text{K}} = (\num{24.9 +- 0.0}) \cdot 10^3 \, \frac{\text{J}}{\text{K}}
   \label{eqn:WC}
 \end{equation}
 soll die Güteziffer der Wärmepumpe bestimmt werden. Die theoretische Güteziffer lässt sich mit Hilfe der Gleichung \ref{eqn:nureal} berechnen und ist in Tabelle \ref{tab:gueteziffer} aufgeführt. Die praktisch bestimmte Güteziffer errechnet sich nach Gleichung \ref{eqn:nureal} aus der Wärmekapazität der Reservoire und der Wärmekapazität der Leitungen
@@ -207,7 +207,7 @@ einen Ausdruck für die Dichte in Abhängigkeit der Temperaturen und Drücke. Di
   \centering
   \begin{tabular}{c c c}
     \toprule
-    $t$ \ s & \rho $\frac{g}{m^3}$ & Leistung N/W \\
+    $t$ \ s & $\rho$ $\frac{10^{-3}kg}{m^3}$ & Leistung N/W \\
     \midrule
     60   & 16.37 &  	\\
     400  & 18.27 &	\\
