--- a/05-17.November/content/diskussion.tex
+++ b/05-17.November/content/diskussion.tex
@@ -1,2 +1,3 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Da alle Messgrößen fehlerbehaftet sind kommt es zur Fehlerfortpflanzung und daraus resultiert das auch die davon abgeleiteten Größen fehlerbehaftet sind. Zusätzlich ist der Versuchsaufbau nicht ideal Isoliert und somit kommt es zum Wärmeaustausch mit der Umgebung. Desweiteren werden Reibungen des Gases an der Leitungen und als auch durch den Propellern erzeugte vernachlässigt. Im Fehler der Dichte des Wassers wird zwar berücksichtigt, dass das Wasser mit der Änderung der Temperatur seine Dichte ändert, jedoch ändert sich der Mittelwert des Wassers mit. Die Abbdichtung der Reservoire sind nicht ideal, da sie nicht optimal an den Versuchsaufbau abschließen und somit Wasser verdunsten kann und Wärme mit der Umgebung ausgetauscht werden kann.
